# CareerSynth

./: .gitignore  README.md  pyproject.toml
career_rnd/: __init__.py  atoms.py  classify.py  cli.py  db.py  embeddings.py  extract.py  ingest.py  llm.py  map_skills.py  overlap.py  report.py
career_rnd/prompts/: classify_distinctiveness.md  extract_skills.md  map_to_atoms.md  merge_suggestions.md
data/inbox/: sample_ux_prototyping_lead.txt
docs/brain/: architecture.md  design-tension.md  ontology.md  phase.md  proposals.md
docs/feature-briefs/: 2026-03-01-career-rnd-dashboard.md  active.md
skill_library/: atoms.json  decisions.jsonl
tests/: conftest.py  test_pipeline_smoke.py
