[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "career-rnd"
version = "0.1.0"
description = "Career R&D Dashboard — skill atom extraction, normalization, and overlap analysis"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "openai>=1.0",
    "pymupdf>=1.23",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "networkx>=3.1",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
]

[project.scripts]
career = "career_rnd.cli:app"

[tool.setuptools.packages.find]
include = ["career_rnd*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
